# a2a_sample

./: .env.example  .gitignore  README.md  client.py  kill_ps.sh  main.py  pyproject.toml
.cursor/rules/: general-viettel-project-cursor-rules.mdc
prompt/main_agent/: chitchat.yaml  entity_extraction.yaml  entity_extraction_complete.yaml  entity_extraction_skeleton.yaml  intent_classification.yaml  intent_classification_complete.yaml  intent_classification_skeleton.yaml  orchestration.yaml  orchestration_complete.yaml  orchestration_skeleton.yaml
prompt/tv_agent/: tv_control.yaml
prompt/weather_agent/: weather_response.yaml
src/: context_manager.py  dynamic_prompt_manager.py  dynamic_query_analyzer.py  extended_agent_card.py  llm_client.py  main_agent.py  prompt_loader.py  query_analyzer.py  tv_agent.py  weather_agent.py
